@@ -18,11 +18,11 @@ Notes for this script.
 
 
 header = '''<HTML>
-<HEAD>
+<HEAD><!-- This file is generated by format-page.py, changes will be lost. !-->
 <TITLE>%(title)s</TITLE>
 <LINK REL="stylesheet" TYPE="text/css" HREF="%(depth)snewweb.css">
 </HEAD>
-<BODY> 
+<BODY>
 '''
 
 main_template = '''<DIV class="main">
