@@ -1,3 +1,4 @@
+<!-- $Id$ !-->
 <title>LilyPond, music notation for everyone</title>  
 
 <h1 align=center>LilyPond <font size="+2"><em>... music notation for
